ds git commit -m

--- a/calculator.html
+++ b/calculator.html
@@ -8,6 +8,10 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div class="main">
+        <div class="outResult">
+            <span class="result"></span>
+        </div>
+    </div>
 </body>
 </html>
