add new line result

--- a/calculator.html
+++ b/calculator.html
@@ -10,8 +10,9 @@
 <body>
     <div class="main">
         <div class="outResult">
-            <span class="result"> </span>
+            <span class="result">55+15</span>
         </div>
+
     </div>
 </body>
 </html>
