--- a/calculator.html
+++ b/calculator.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,12 +8,35 @@
     <title>Calculator</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <div class="main">
         <div class="outResult">
             <span class="result">55+15</span>
         </div>
-
+        <div class="commandButton">
+            <button class="btn">C</button>
+            <button class="btn">±</button>
+            <button class="btn">%</button>
+            <button class="btn">÷</button>
+            <button class="btn">7</button>
+            <button class="btn">8</button>
+            <button class="btn">9</button>
+            <button class="btn">×</button>
+            <button class="btn">4</button>
+            <button class="btn">5</button>
+            <button class="btn">6</button>
+            <button class="btn">-</button>
+            <button class="btn">1</button>
+            <button class="btn">2</button>
+            <button class="btn">3</button>
+            <button class="btn">+</button>
+            <button class="btn">0</button>
+            <button class="btn"></button>
+            <button class="btn">,</button>
+            <button class="btn">=</button>
+        </div>
     </div>
 </body>
+
 </html>
